--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,16 @@
-.header {
-  box-sizing: border-box;
+body {
+  font-family: "Inconsolata", sans-serif;
+}
+.main {
   width: 50%;
   min-width: 700px;
-  margin: 2em auto;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  margin: auto;
+}
+.header {
+  margin: 2em 0;
+  padding: 5px 0;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.25);
 }
 .header h1 {
-  font-family: "Inconsolata", sans-serif;
   font-size: 3em;
 }
-k
