--- a/css/tabs.css
+++ b/css/tabs.css
@@ -4,7 +4,7 @@
 .tabs li a { color: black; float: left; display: block; padding: 4px 10px; margin-left: -1px; position: relative; left: 1px; background: white; text-decoration: none; }
 .group:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
 .box-wrap { position: relative; min-height: 250px; }
-.tabbed-area div div { background: white; padding: 20px; min-height: 250px; position: absolute; top: -1px; left: 0; width: 100%; }
+.tabbed-area > div > div { background: white; padding: 20px 0; min-height: 250px; position: absolute; top: -1px; left: 0; width: 100%; }
 .tabs li a {
   border-bottom: 1px solid #ccc;
   margin-bottom: 5px;
